--- a/zh/services/safety-and-cost-effectivenes.html
+++ b/zh/services/safety-and-cost-effectivenes.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html><!--  Last Published: Wed Oct 30 2024 03:33:27 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6720533a62ac725ee4557c18" data-wf-site="671f3e84745c706f014566a2">
+<html data-wf-page="67219da739776589d3e4f0f1" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
-  <title>AI-Powered Employee Training Hub</title>
-  <meta content="AI-Powered Employee Training Hub" property="og:title">
-  <meta content="AI-Powered Employee Training Hub" property="twitter:title">
+  <title>Safety and Cost-Effectivenes</title>
+  <meta content="Safety and Cost-Effectivenes" property="og:title">
+  <meta content="Safety and Cost-Effectivenes" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="../css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="../css/components.css" rel="stylesheet" type="text/css">
-  <link href="../css/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.css" rel="stylesheet" type="text/css">
+  <link href="../../css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="../../css/components.css" rel="stylesheet" type="text/css">
+  <link href="../../css/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.png" rel="apple-touch-icon">
+  <link href="../../images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="../../images/webclip.png" rel="apple-touch-icon">
   <meta name="google-site-verification" content="AZdG0b9UsEJo-3OFhc_NBXNuXpiVdxkG9Y_vshAdiig">
 </head>
 <body>
@@ -198,18 +198,18 @@ margin: 0rem !important;
   @media screen and (max-width:479px) { html { font-size: calc(0.31106171548117156rem + 2.301255230125523vw); } }
 </style>
     </div>
-    <div data-animation="default" class="navbar_component w-nav" data-easing2="ease" fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium" data-w-id="b0a06d77-91b4-73f9-8175-bcbf7327f34e" role="banner" data-duration="400">
+    <div data-animation="default" class="navbar_component w-nav" data-easing2="ease" fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium" data-w-id="dff62bf6-5b11-0d68-3b2a-974d276ca1ec" role="banner" data-duration="400">
       <div class="navbar_container">
-        <a href="../index.html" id="w-node-b0a06d77-91b4-73f9-8175-bcbf7327f350-7327f34e" class="navbar_logo-link w-nav-brand"><img src="../images/Asset-1.svg" loading="eager" alt="" class="nav-logo"></a>
-        <nav role="navigation" id="w-node-b0a06d77-91b4-73f9-8175-bcbf7327f353-7327f34e" class="navbar_menu is-page-height-tablet w-nav-menu">
-          <a href="../index.html" class="navbar_link w-nav-link">Home</a>
-          <a href="../about.html" class="navbar_link w-nav-link">About</a>
-          <a href="../services.html" class="navbar_link w-nav-link">Services</a>
-          <a href="../portfolio.html" class="navbar_link w-nav-link">Portfolio</a>
-          <a href="../macau-presence.html" class="navbar_link w-nav-link">Macau Presence</a>
-          <a href="../blog.html" class="navbar_link w-nav-link">Blogs</a>
+        <a href="../../zh.html" id="w-node-dff62bf6-5b11-0d68-3b2a-974d276ca1ee-276ca1ec" class="navbar_logo-link w-nav-brand"><img loading="eager" src="../../images/Asset-1.svg" alt="" class="nav-logo"></a>
+        <nav role="navigation" id="w-node-dff62bf6-5b11-0d68-3b2a-974d276ca1f0-276ca1ec" class="navbar_menu is-page-height-tablet w-nav-menu">
+          <a href="../../zh.html" class="navbar_link w-nav-link">首頁</a>
+          <a href="../../zh/about.html" class="navbar_link w-nav-link">關於我們</a>
+          <a href="../../zh/services.html" class="navbar_link w-nav-link">我們的服務</a>
+          <a href="../../zh/portfolio.html" class="navbar_link w-nav-link">過往項目<span class="text-style-stroke">‍</span></a>
+          <a href="../../zh/macau-presence.html" class="navbar_link w-nav-link">澳門業務</a>
+          <a href="../../zh/blog.html" class="navbar_link w-nav-link">部落格</a>
           <div class="navbar_locales-wrapper is-desktop-hidden w-locales-list">
-            <div data-hover="false" data-delay="0" data-w-id="659241f1-f19a-1961-43b1-0cb8873bc6a5" class="navbar_locales-dropdown w-dropdown">
+            <div data-delay="0" data-hover="false" class="navbar_locales-dropdown w-dropdown">
               <div class="navbar_locales-dropdown-toggle w-dropdown-toggle">
                 <div>Language</div>
                 <div class="navbar_locales-dropdown-icon w-icon-dropdown-toggle"></div>
@@ -217,27 +217,27 @@ margin: 0rem !important;
               <nav class="navbar_locales-dropdown-list w-dropdown-list">
                 <div role="list" class="navbar_locales-list w-locales-items">
                   <div role="listitem" class="navbar_locale w-locales-item">
-                    <a hreflang="en" href="../service/ai-powered-employee-training-hub.html" aria-current="page" class="navbar_locales-link">English</a>
+                    <a hreflang="en" href="../../zh/services/safety-and-cost-effectivenes.html" aria-current="page" class="navbar_locales-link">English</a>
                   </div>
                 </div>
               </nav>
             </div>
           </div>
         </nav>
-        <div id="w-node-b0a06d77-91b4-73f9-8175-bcbf7327f35e-7327f34e" class="navbar_button-wrapper">
+        <div id="w-node-dff62bf6-5b11-0d68-3b2a-974d276ca20c-276ca1ec" class="navbar_button-wrapper">
           <div class="navbar_locales-wrapper hide-tablet w-locales-list">
-            <div data-hover="false" data-delay="0" data-w-id="6c72b275-e4b0-3ffb-9b93-2ec4a3b06095" class="navbar_locales-dropdown w-dropdown">
+            <div data-delay="0" data-hover="false" data-w-id="dff62bf6-5b11-0d68-3b2a-974d276ca20e" class="navbar_locales-dropdown w-dropdown">
               <div class="navbar_locales-dropdown-toggle w-dropdown-toggle">
                 <div>Language</div>
                 <div class="navbar_locales-dropdown-icon w-icon-dropdown-toggle"></div>
               </div>
               <nav class="navbar_locales-dropdown-list w-dropdown-list">
-                <a href="../index.html" class="navbar_link is-locale">English</a>
-                <a href="../zh.html" class="navbar_link is-locale">繁體中文 (香港)</a>
+                <a href="../../index.html" class="navbar_link is-locale">English</a>
+                <a href="../../zh.html" class="navbar_link is-locale">繁體中文 (香港)</a>
               </nav>
             </div>
           </div>
-          <a href="../contact-us.html" class="navbar_link hide-tablet w-nav-link">Contact us</a>
+          <a href="../../zh/contact-us.html" class="navbar_link hide-tablet w-nav-link">聯絡我們</a>
           <div class="navbar_menu-button w-nav-button">
             <div class="menu-icon">
               <div class="menu-icon2_line-top"></div>
@@ -254,10 +254,10 @@ margin: 0rem !important;
       <section class="section_blog-hero">
         <div class="padding-global z-index-1">
           <div class="blog-hero_component">
-            <h1 class="heading-style-h1">AI-Powered Employee Training Hub</h1>
+            <h1 class="heading-style-h1">安全性和成本效益</h1>
           </div>
         </div>
-        <div class="bloghero_image-wrapper"><img sizes="100vw" srcset="../images/wepik-export-20230906103430JP0D-p-500.jpeg 500w, ../images/wepik-export-20230906103430JP0D-p-800.jpeg 800w, ../images/wepik-export-20230906103430JP0D-p-1080.jpeg 1080w, ../images/wepik-export-20230906103430JP0D-p-1600.jpeg 1600w, ../images/wepik-export-20230906103430JP0D.jpeg 2000w" alt="" src="../images/wepik-export-20230906103430JP0D.jpeg" loading="lazy" class="image-cover is-top"></div>
+        <div class="bloghero_image-wrapper"><img sizes="100vw" srcset="../../images/671f3e84745c706f01456781_01-p-500.jpg 500w, ../../images/671f3e84745c706f01456781_01-p-800.jpg 800w, ../../images/671f3e84745c706f01456781_01.jpg 1000w" alt="" src="../../images/671f3e84745c706f01456781_01.jpg" loading="lazy" class="image-cover is-top"></div>
       </section>
       <section class="section_values">
         <div class="padding-global">
@@ -265,7 +265,7 @@ margin: 0rem !important;
             <div class="padding-section-large">
               <div data-w-id="026aa282-31e1-e898-b041-fdcdc2959e89" class="values_component">
                 <div>
-                  <p style="-webkit-transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-size-xlarge">Established in 1998, Wintech pioneers in infrastructure safety, reliability, and cutting-edge engineering solutions.</p>
+                  <p style="-webkit-transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 2rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-size-xlarge">Wintech成立於1998年,是基礎設施安全，可靠性和尖端工程解決方案的先驅。</p>
                 </div>
                 <div class="spacer-large"></div>
                 <div class="max-width-large hide">
@@ -275,8 +275,8 @@ margin: 0rem !important;
                 </div>
                 <div class="spacer-xlarge"></div>
                 <div class="button-group">
-                  <a href="../contact-us.html" class="button w-button">Contact us</a>
-                  <a href="../services.html" class="button is-secondary w-button">All Services</a>
+                  <a href="../../zh/contact-us.html" class="button w-button">聯絡我們</a>
+                  <a href="../../zh/services.html" class="button is-secondary w-button">所有服務</a>
                 </div>
               </div>
             </div>
@@ -284,65 +284,65 @@ margin: 0rem !important;
         </div>
       </section>
     </main>
-    <footer data-w-id="75b00a7f-b312-aeda-4af2-66bb86326b6f" class="footer_component">
+    <footer data-w-id="6b673328-9f9a-d415-2d06-0acc42601a37" class="footer_component">
       <div class="padding-global">
         <div class="padding-top padding-xhuge">
           <div class="footer_header">
             <div class="footer_label-component">
-              <div class="text-size-medium">GET IN TOUCH</div>
+              <div class="text-size-medium">聯絡我們</div>
             </div>
             <div class="spacer-medium"></div>
-            <a href="../contact-us.html" class="footer_button w-button">CONTACT US.</a>
+            <a href="../../zh/contact-us.html" class="footer_button w-button"><strong>聯絡我們</strong>.</a>
           </div>
           <div class="line-divider"></div>
           <div class="w-layout-grid footer_top-wrapper">
             <div class="footer_left-wrapper">
-              <a href="#" class="footer_logo-link w-nav-brand"><img src="../images/Asset-1.svg" loading="lazy" alt="" class="footer_logo-image"></a>
+              <a href="../../zh.html" class="footer_logo-link w-nav-brand"><img loading="lazy" src="../../images/Asset-1.svg" alt="" class="footer_logo-image"></a>
               <div class="footer_license-component">
-                <div>Certifications:</div>
+                <div>證書/牌照：</div>
                 <div class="footer_license-row">
-                  <div class="footer_license-link-wrapper"><img src="../images/image-14.webp" loading="lazy" sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="../images/image-14-p-500.webp 500w, ../images/image-14.webp 640w" alt="" class="footer_license-image">
-                    <div>Certificate of Registration of Electrical Contractor</div>
+                  <div class="footer_license-link-wrapper"><img sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="../../images/image-14-p-500.webp 500w, ../../images/image-14.webp 640w" alt="" src="../../images/image-14.webp" loading="lazy" class="footer_license-image">
+                    <div>電業承辦商註冊證書</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img src="../images/image-13.webp" loading="lazy" sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="../images/image-13-p-500.webp 500w, ../images/image-13-p-800.webp 800w, ../images/image-13.webp 1200w" alt="" class="footer_license-image">
-                    <div>Registration as a Chemical Waste Producer</div>
+                  <div class="footer_license-link-wrapper"><img sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="../../images/image-13-p-500.webp 500w, ../../images/image-13-p-800.webp 800w, ../../images/image-13.webp 1200w" alt="" src="../../images/image-13.webp" loading="lazy" class="footer_license-image">
+                    <div>化學廢物生產者註冊</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img src="../images/Hong_Kong_Security_Bureau.webp" loading="lazy" alt="" class="footer_license-image">
-                    <div>Security Company License</div>
+                  <div class="footer_license-link-wrapper"><img loading="lazy" src="../../images/Hong_Kong_Security_Bureau.webp" alt="" class="footer_license-image">
+                    <div>保安公司牌照</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img src="../images/New-Project-4.webp" loading="lazy" sizes="(max-width: 479px) 29vw, (max-width: 767px) 19vw, (max-width: 991px) 13vw, 8vw" srcset="../images/New-Project-4-p-500.webp 500w, ../images/New-Project-4-p-800.webp 800w, ../images/New-Project-4-p-1080.webp 1080w, ../images/New-Project-4.webp 1120w" alt="" class="footer_license-image">
-                    <div>Good MPF Employer</div>
+                  <div class="footer_license-link-wrapper"><img sizes="(max-width: 479px) 29vw, (max-width: 767px) 19vw, (max-width: 991px) 13vw, 8vw" srcset="../../images/New-Project-4-p-500.webp 500w, ../../images/New-Project-4-p-800.webp 800w, ../../images/New-Project-4-p-1080.webp 1080w, ../../images/New-Project-4.webp 1120w" alt="" src="../../images/New-Project-4.webp" loading="lazy" class="footer_license-image">
+                    <div>良好僱主強積金計劃</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img src="../images/QualitySysCert_ISO9001_col-1-removebg-preview-1.webp" loading="lazy" alt="" class="footer_license-image">
-                    <div>ISO 9001 Management System Certification</div>
+                  <div class="footer_license-link-wrapper"><img loading="lazy" src="../../images/QualitySysCert_ISO9001_col-1-removebg-preview-1.webp" alt="" class="footer_license-image">
+                    <div>ISO 9001 管理系統認證</div>
                   </div>
                 </div>
               </div>
             </div>
-            <div id="w-node-_75b00a7f-b312-aeda-4af2-66bb86326b81-86326b6f" class="w-layout-grid footer_menu-wrapper">
-              <div id="w-node-_75b00a7f-b312-aeda-4af2-66bb86326b82-86326b6f" class="footer_link-list">
+            <div id="w-node-_6b673328-9f9a-d415-2d06-0acc42601a60-42601a37" class="w-layout-grid footer_menu-wrapper">
+              <div id="w-node-_6b673328-9f9a-d415-2d06-0acc42601a61-42601a37" class="footer_link-list">
                 <div class="footer_link-list-header">
-                  <div class="text-style-muted">SITEMAP</div>
+                  <div class="text-style-muted">網站地圖</div>
                 </div>
-                <a href="../index.html" class="footer_link">Home</a>
-                <a href="../about.html" class="footer_link">About</a>
-                <a href="../services.html" class="footer_link">Services</a>
-                <a href="../portfolio.html" class="footer_link">Portfolio</a>
-                <a href="../macau-presence.html" class="footer_link">Macau Presence</a>
-                <a href="../blog.html" class="footer_link">Blogs</a>
-                <a href="../contact-us.html" class="footer_link">Contact us</a>
+                <a href="../../zh.html" class="footer_link">首頁</a>
+                <a href="../../zh/about.html" class="footer_link">關於</a>
+                <a href="../../zh/services.html" class="footer_link">服務</a>
+                <a href="../../zh/portfolio.html" class="footer_link">過往項目<span class="text-style-stroke">‍</span></a>
+                <a href="../../zh/macau-presence.html" class="footer_link">澳門存在</a>
+                <a href="../../zh/blog.html" class="footer_link">部落格</a>
+                <a href="../../zh/contact-us.html" class="footer_link">聯絡我們</a>
               </div>
             </div>
           </div>
           <div class="line-divider"></div>
           <div class="padding-top padding-medium">
             <div class="footer_bottom-wrapper">
-              <div class="footer_credit-text">© <span id="year">2024</span> WINTECH. All rights reserved.</div>
+              <div class="footer_credit-text">© <span id="year">2024</span> WINTECH. 版權所有。</div>
               <div class="hide w-embed w-script">
                 <script>document.querySelector('#year').innerText = new Date().getFullYear();</script>
               </div>
               <div class="footer_credit-text">
-                <a href="https://www.mediastudio.space" target="_blank">WEB DESIGN</a>
+                <a href="https://www.mediastudio.space" target="_blank">網站設計</a>
               </div>
             </div>
           </div>
@@ -351,6 +351,6 @@ margin: 0rem !important;
     </footer>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=671f3e84745c706f014566a2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="../js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
+  <script src="../../js/wintech-1b0d03-7fde6d60e88cfb09b3740ff5.js" type="text/javascript"></script>
 </body>
 </html>
