--- a/zh/about.html
+++ b/zh/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:32:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 01 2024 01:37:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67219a1b0061f0485c86a2e3" data-wf-site="671f3e84745c706f014566a2">
 <head>
   <meta charset="utf-8">
@@ -362,16 +362,16 @@ margin: 0rem !important;
               <div class="footer_license-component">
                 <div>證書/牌照：</div>
                 <div class="footer_license-row">
-                  <div class="footer_license-link-wrapper"><img sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="../images/image-14-p-500.webp 500w, ../images/image-14.webp 640w" alt="" src="../images/image-14.webp" loading="lazy" class="footer_license-image">
+                  <div class="footer_license-link-wrapper"><img sizes="100vw" srcset="../images/image-14-p-500.webp 500w, ../images/image-14.webp 640w" alt="" src="../images/image-14.webp" loading="lazy" class="footer_license-image">
                     <div>電業承辦商註冊證書</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img sizes="(max-width: 479px) 13vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" srcset="../images/image-13-p-500.webp 500w, ../images/image-13-p-800.webp 800w, ../images/image-13.webp 1200w" alt="" src="../images/image-13.webp" loading="lazy" class="footer_license-image">
+                  <div class="footer_license-link-wrapper"><img sizes="100vw" srcset="../images/image-13-p-500.webp 500w, ../images/image-13-p-800.webp 800w, ../images/image-13.webp 1200w" alt="" src="../images/image-13.webp" loading="lazy" class="footer_license-image">
                     <div>化學廢物生產者註冊</div>
                   </div>
                   <div class="footer_license-link-wrapper"><img loading="lazy" src="../images/Hong_Kong_Security_Bureau.webp" alt="" class="footer_license-image">
                     <div>保安公司牌照</div>
                   </div>
-                  <div class="footer_license-link-wrapper"><img sizes="(max-width: 479px) 29vw, (max-width: 767px) 19vw, (max-width: 991px) 13vw, 8vw" srcset="../images/New-Project-4-p-500.webp 500w, ../images/New-Project-4-p-800.webp 800w, ../images/New-Project-4-p-1080.webp 1080w, ../images/New-Project-4.webp 1120w" alt="" src="../images/New-Project-4.webp" loading="lazy" class="footer_license-image">
+                  <div class="footer_license-link-wrapper"><img sizes="100vw" srcset="../images/New-Project-4-p-500.webp 500w, ../images/New-Project-4-p-800.webp 800w, ../images/New-Project-4-p-1080.webp 1080w, ../images/New-Project-4.webp 1120w" alt="" src="../images/New-Project-4.webp" loading="lazy" class="footer_license-image">
                     <div>良好僱主強積金計劃</div>
                   </div>
                   <div class="footer_license-link-wrapper"><img loading="lazy" src="../images/QualitySysCert_ISO9001_col-1-removebg-preview-1.webp" alt="" class="footer_license-image">
